# run-kit

./: README.md  __init__.py  pyproject.toml  setup.py
run_kit/: cli.py  constants.py
run_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
run_kit/project_types/: memory_assistant.py  simple_chat.py  specialized_agent.py
run_kit/templates/base/: .env.example  README.md  app.py  requirements.base.txt
run_kit/templates/features/caching/: cache.py  requirements.txt
run_kit/templates/features/conversation_persistence/: persistence.py  requirements.txt
run_kit/templates/features/file_uploads/: file_processor.py  requirements.txt
run_kit/templates/features/vector_db/: requirements.txt  vector_store.py
run_kit/templates/providers/anthropic/: llm_config.py  requirements.txt
run_kit/templates/providers/gemini/: llm_config.py  requirements.txt
run_kit/templates/providers/ollama/: llm_config.py  requirements.txt
run_kit/utils/: files.py
