[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "run-kit"
version = "0.1.0"
description = "A CLI tool to quickly set up AI projects."
readme = "README.md"
authors = [{ name = "holasoymalva", email = "alquimista3301@gmail.com.com" }]
license = { file = "LICENSE" }
dependencies = []

[project.scripts]
run-kit = "run_kit.cli:main"
