[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "run-kit"
version = "0.1.0"
description = "A CLI tool to quickly set up AI projects."
readme = "README.md"
authors = [{ name = "holasoymalva", email = "alquimista3301@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "altair>=5.4.1",
    "annotated-types>=0.7.0",
    "anthropic>=0.37.1",
    "anyio>=4.6.2.post1",
    "attrs>=24.2.0",
    "blessed>=1.20.0",
    "blinker>=1.8.2",
    "cachetools>=5.5.0",
    "certifi>=2024.8.30",
    "charset-normalizer>=3.4.0",
    "click>=8.1.7",
    "colorama>=0.4.6",
    "distro>=1.9.0",
    "editor>=1.6.6",
    "et_xmlfile>=2.0.0",
    "filelock>=3.16.1",
    "fsspec>=2024.10.0",
    "gitdb>=4.0.11",
    "GitPython>=3.1.43",
    "h11>=0.14.0",
    "httpcore>=1.0.6",
    "httpx>=0.27.2",
    "huggingface-hub>=0.26.2",
    "idna>=3.10",
    "inquirer>=3.4.0",
    "Jinja2>=3.1.4",
    "jiter>=0.6.1",
    "jsonschema>=4.23.0",
    "jsonschema-specifications>=2024.10.1",
    "markdown-it-py>=3.0.0",
    "MarkupSafe>=3.0.2",
    "mdurl>=0.1.2",
    "narwhals>=1.12.1",
    "numpy>=2.1.2",
    "openpyxl>=3.1.5",
    "packaging>=24.1",
    "pandas>=2.2.3",
    "pillow>=10.4.0",
    "protobuf>=5.28.3",
    "pyarrow>=18.0.0",
    "pydantic>=2.9.2",
    "pydantic_core>=2.23.4",
    "pydeck>=0.9.1",
    "Pygments>=2.18.0",
    "pypdf>=5.3.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "PyYAML>=6.0.2",
    "readchar>=4.2.1",
    "referencing>=0.35.1",
    "requests>=2.32.3",
    "rich>=13.9.3",
    "rpds-py>=0.20.0",
    "runs>=1.2.2",
    "six>=1.16.0",
    "smmap>=5.0.1",
    "sniffio>=1.3.1",
    "streamlit>=1.39.0",
    "tenacity>=9.0.0",
    "tokenizers>=0.15.2",
    "toml>=0.10.2",
    "tornado>=6.4.1",
    "tqdm>=4.66.6",
    "typing_extensions>=4.12.2",
    "tzdata>=2024.2",
    "urllib3>=2.2.3",
    "wcwidth>=0.2.13",
    "xmod>=1.8.1"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

keywords = ["ai", "llm", "anthropic", "gemini", "ollama", "streamlit", "generator"]

[project.urls]
Homepage = "https://github.com/holasoymalva/run-kit"
Bug-Tracker = "https://github.com/holasoymalva/run-kit/issues"

[project.scripts]
run-kit = "run_kit.cli:main"

[tool.setuptools]
packages = ["run_kit"]